--- a/README
+++ b/README
@@ -2,6 +2,7 @@ Complete desktop environment using ncurses based apps.
 
 Changes include:
  - mutt patch preventing segfault when using imap;
+ - mutt sidebar patch for proper line length calculation (it assumes utf8 locale);
  - screen vertical split patch;
  - mcabber-modules ebuild;
  - mod-mcabber-pep ebuild;
