--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Complete desktop environment using ncurses based apps.
 
 Changes include:
+ - mutt patch providing ability to disable IMAP authentication using SASL;
  - mutt patch preventing segfault when using imap;
  - mutt sidebar patch for proper line length calculation (it assumes utf8 locale);
  - screen vertical split patch;
